# POSCODX-diffwatch

./: .gitignore  INTRODUCTION.md  README.md  pyproject.toml  webhook_server.py
frontend/: app.js  index.html  style.css
prompts/: system.md
rag/: retriever.py
rag/documents/: code_changes_log.md
skills/code-impact-analysis/: SKILL.md
tools/: change_memory_tools.py  git_tools.py  notification_tools.py
